Fix hamburger icon alignment

--- a/website/src/app/modules/site-menus/site-header/hamburger-menu/hamburger-menu.component.css
+++ b/website/src/app/modules/site-menus/site-header/hamburger-menu/hamburger-menu.component.css
@@ -43,6 +43,6 @@ app-cogs-logo-text-button {
 
 .hamburger-icon {
 	position: relative;
-	top: -2px;
+	top: 2px;
 	z-index: 10;
 }
